[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gemino = {path= "../gemino" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
log = "0.4"
crossbeam-channel = "0.5"
kanal = "0.1.0-pre7"