[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"
gemino = {path= "../gemino" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
log = "0.4"
#bus = "2.3.0"
#broadcaster = "1.0.0"
multiqueue = "0.3.2"
#multiqueue2 = "0.1.7"