[package]
name = "gemino"
version = "0.3.0"
edition = "2021"
description="A fast multi producer multi consumer (MPMC) broadcasting channel"
readme = "../README.md"
repository = "https://github.com/Lochlanna/gemino"
homepage = "https://github.com/Lochlanna/gemino"
license = "MIT"
keywords = ["mpmc", "async", "lock-free", "channel", "broadcast"]
categories = ["concurrency", "data-structures","asynchronous"]
exclude = ["/.*"]

[dependencies]
event-listener = {version = "2.5"}
thiserror = "1.0"
parking_lot = {version="0.12.1", optional = true}

[features]
default = ["clone"]
clone=["parking_lot"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
chrono = "0.4"
anyhow = "1.0"
